number alignment fix

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -5,6 +5,7 @@
 html {
   color-scheme: light;
   scroll-behavior: smooth;
+  font-variant-numeric: lining-nums tabular-nums;
 }
 
 html.dark {
